--- a/Portfolio Website/vercel.json
+++ b/Portfolio Website/vercel.json
@@ -1,6 +1,10 @@
 {
+    "static": {
+      "directory": "public"
+    },
     "routes": [
-      { "src": "/", "dest": "/src/index.html" }
+      { "src": "/files/(.*)", "dest": "/public/files/$1" },
+      { "src": "/img/(.*)", "dest": "/public/img/$1" }
     ]
   }
   
