--- a/Portfolio Website/vercel.json
+++ b/Portfolio Website/vercel.json
@@ -1,5 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/src/$1" }
+  "routes": [
+    { "src": "/(.*)", "dest": "/src/$1" }
   ]
 }
